sys/prebuilt-bindings/geos_3.11.rs

#[doc = " Writer object to turn a Geometry into GeoJSON."]
#[doc = " \\see GEOSGeoJSONReader_create"]
#[doc = " \\see GEOSGeoJSONReader_create_r"]
pub type GEOSGeoJSONWriter = GEOSGeoJSONWriter_t;
extern "C" {
    #[doc = " \\see GEOSWKTReader_create"]
    pub fn GEOSWKTReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTReader;
}
extern "C" {
    #[doc = " \\see GEOSWKTReader_destroy"]
    pub fn GEOSWKTReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKTReader);
}
extern "C" {
    #[doc = " \\see GEOSWKTReader_read"]
    pub fn GEOSWKTReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKTReader,
        wkt: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSWKTReader_create"]
    pub fn GEOSWKTWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTWriter;
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_destroy"]
    pub fn GEOSWKTWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKTWriter);
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_write"]
    pub fn GEOSWKTWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_setTrim"]
    pub fn GEOSWKTWriter_setTrim_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        trim: libc::c_char,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_setRoundingPrecision"]
    pub fn GEOSWKTWriter_setRoundingPrecision_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        precision: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_setOutputDimension"]
    pub fn GEOSWKTWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        dim: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_getOutputDimension"]
    pub fn GEOSWKTWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSWKTWriter_setOld3D"]
    pub fn GEOSWKTWriter_setOld3D_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        useOld3D: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKBReader_create"]
    pub fn GEOSWKBReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBReader;
}
extern "C" {
    #[doc = " \\see GEOSWKBReader_destroy"]
    pub fn GEOSWKBReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKBReader);
}
extern "C" {
    #[doc = " \\see GEOSWKBReader_read"]
    pub fn GEOSWKBReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        wkb: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSWKBReader_readHEX"]
    pub fn GEOSWKBReader_readHEX_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        hex: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_create"]
    pub fn GEOSWKBWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBWriter;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_destroy"]
    pub fn GEOSWKBWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKBWriter);
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_write"]
    pub fn GEOSWKBWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_writeHEX"]
    pub fn GEOSWKBWriter_writeHEX_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_getOutputDimension"]
    pub fn GEOSWKBWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_setOutputDimension"]
    pub fn GEOSWKBWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        newDimension: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_getByteOrder"]
    pub fn GEOSWKBWriter_getByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_setByteOrder"]
    pub fn GEOSWKBWriter_setByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        byteOrder: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_getFlavor"]
    pub fn GEOSWKBWriter_getFlavor_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_setFlavor"]
    pub fn GEOSWKBWriter_setFlavor_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        flavor: libc::c_int,
    );
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_getIncludeSRID"]
    pub fn GEOSWKBWriter_getIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSWKBWriter_setIncludeSRID"]
    pub fn GEOSWKBWriter_setIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        writeSRID: libc::c_char,
    );
}
extern "C" {
    #[doc = " \\see GEOSGeoJSONReader_create"]
    pub fn GEOSGeoJSONReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSGeoJSONReader;
}
extern "C" {
    #[doc = " \\see GEOSGeoJSONReader_destroy"]
    pub fn GEOSGeoJSONReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSGeoJSONReader);
}
extern "C" {
    #[doc = " \\see GEOSWKTReader_read"]
    pub fn GEOSGeoJSONReader_readGeometry_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSGeoJSONReader,
        geojson: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeoJSONWriter_create"]
    pub fn GEOSGeoJSONWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSGeoJSONWriter;
}
extern "C" {
    #[doc = " \\see GEOSGeoJSONWriter_destroy"]
    pub fn GEOSGeoJSONWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSGeoJSONWriter);
}
extern "C" {
    #[doc = " \\see GEOSGeoJSONWriter_writeGeometry"]
    pub fn GEOSGeoJSONWriter_writeGeometry_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSGeoJSONWriter,
        g: *const GEOSGeometry,
        indent: libc::c_int,
    ) -> *mut libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSFree"]
    pub fn GEOSFree_r(handle: GEOSContextHandle_t, buffer: *mut libc::c_void);
}
extern "C" {
    #[doc = " Returns the current GEOS version string. eg: \"3.10.0\""]
    #[doc = " This function does not have a reentrant variant and is"]
    #[doc = " available if `GEOS_USE_ONLY_R_API` is defined."]
    #[doc = " \\return version string"]
    pub fn GEOSversion() -> *const libc::c_char;
}
extern "C" {
    #[doc = " For non-reentrant code, set up an execution contact, and associate"]
    #[doc = " \\ref GEOSMessageHandler functions with it, to pass error and notice"]
    #[doc = " messages back to the calling application."]
    #[doc = " <pre>"]
    #[doc = " typedef void (*GEOSMessageHandler)(const char *fmt, ...);"]
    #[doc = " </pre>"]
    #[doc = ""]
    #[doc = " \\param notice_function Handle notice messages"]
    #[doc = " \\param error_function Handle error messages"]
    pub fn initGEOS(notice_function: GEOSMessageHandler, error_function: GEOSMessageHandler);
}
extern "C" {
    #[doc = " For non-reentrant code, call when all GEOS operations are complete,"]
    #[doc = " cleans up global resources."]
    pub fn finishGEOS();
}
extern "C" {
    #[doc = " Free strings and byte buffers returned by functions such"]
    #[doc = " as GEOSWKBWriter_write(),"]
    #[doc = " GEOSWKBWriter_writeHEX() and GEOSWKTWriter_write(), etc."]
    #[doc = " \\param buffer The memory to free"]
    pub fn GEOSFree(buffer: *mut libc::c_void);
}
extern "C" {
    #[doc = " Create a coordinate sequence."]
    #[doc = " \\param size number of coordinates in the sequence"]
    #[doc = " \\param dims dimensionality of the coordinates (2 or 3)"]
    #[doc = " \\return the sequence or NULL on exception"]
    pub fn GEOSCoordSeq_create(size: libc::c_uint, dims: libc::c_uint) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Create a coordinate sequence by copying from a buffer of doubles (XYXY or XYZXYZ)"]
    #[doc = " \\param buf pointer to buffer"]
    #[doc = " \\param size number of coordinates in the sequence"]
    #[doc = " \\param hasZ does buffer have Z values?"]
    #[doc = " \\param hasM does buffer have M values? (they will be ignored)"]
    #[doc = " \\return the sequence or NULL on exception"]
    pub fn GEOSCoordSeq_copyFromBuffer(
        buf: *const f64,
        size: libc::c_uint,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Create a coordinate sequence by copying from arrays of doubles"]
    #[doc = " \\param x array of x coordinates"]
    #[doc = " \\param y array of y coordinates"]
    #[doc = " \\param z array of z coordinates, or NULL"]
    #[doc = " \\param m array of m coordinates, (must be NULL)"]
    #[doc = " \\param size length of each array"]
    #[doc = " \\return the sequence or NULL on exception"]
    pub fn GEOSCoordSeq_copyFromArrays(
        x: *const f64,
        y: *const f64,
        z: *const f64,
        m: *const f64,
        size: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Copy the contents of a coordinate sequence to a buffer of doubles (XYXY or XYZXYZ)"]
    #[doc = " \\param s sequence to copy"]
    #[doc = " \\param buf buffer to which coordinates should be copied"]
    #[doc = " \\param hasZ copy Z values to buffer?"]
    #[doc = " \\param hasM copy M values to buffer? (will be NaN)"]
    #[doc = " \\return 1 on success, 0 on error"]
    pub fn GEOSCoordSeq_copyToBuffer(
        s: *const GEOSCoordSequence,
        buf: *mut f64,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Copy the contents of a coordinate sequence to a buffer of doubles (XYZY or XYZXYZ)"]
    #[doc = " \\param s sequence to copy"]
    #[doc = " \\param x array to which x values should be copied"]
    #[doc = " \\param y array to which y values should be copied"]
    #[doc = " \\param z array to which z values should be copied, or NULL"]
    #[doc = " \\param m array to which m values should be copied (will all be NAN)"]
    #[doc = " \\return 1 on success, 0 on error"]
    pub fn GEOSCoordSeq_copyToArrays(
        s: *const GEOSCoordSequence,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
        m: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Clone a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence to clone"]
    #[doc = " \\return a copy of the coordinate sequence or NULL on exception"]
    pub fn GEOSCoordSeq_clone(s: *const GEOSCoordSequence) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Destroy a coordinate sequence, freeing all memory."]
    #[doc = " \\param s the coordinate sequence to destroy"]
    pub fn GEOSCoordSeq_destroy(s: *mut GEOSCoordSequence);
}
